# sticky-todo

./: .editorconfig  .gitattributes  .gitignore  BUILD.md  EXEの作り方.md  LICENSE  PRIVACY.md  README.md  UPDATE_AND_SIGNING.md  index.html  package.json  vite.config.ts
.github/workflows/: build.yml
scripts/: build-clean.ps1  generate-icons.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src/components/: CategoryList.tsx  ContextMenu.tsx  ErrorBoundary.tsx  NoteList.tsx  TodoItem.tsx
src/components/todo/: FloatingDropdown.tsx  badges.tsx  contextMenu.ts  inlinePickers.tsx  rowKeyboard.ts  textRender.tsx
src/store/: appStore.ts  bulkActions.ts  noteStore.ts  saveQueue.ts
src/types/: index.ts
src/utils/: log.ts  sync.ts
src/windows/: Launcher.tsx  Note.tsx
src/windows/launcher/: AdvancedTab.tsx  SettingsModal.tsx
src/windows/note/: Toolbar.tsx  overlays.tsx  useCloseHandler.ts  useReminders.ts
tests/: e2e.test.ts  errorBoundary.test.tsx  noteStore.test.ts  persistence.test.ts  setup.ts
